--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,15 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+  <nav>
+    <% if !user_signed_in? %>
+      <%= link_to "Sign In", new_user_session_path %>
+      <%= link_to "Sign UP", new_user_registration_path %>
+      <%= link_to "Sign in with Github", user_github_omniauth_authorize_path %>
+      <% else %>
+      <%= button_to "Sign Out", destroy_user_session_path, {method: 'delete'} %>
+    <% end%>
+  </nav>
   <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
 
