--- a/app/assets/stylesheets/exercise_logs.scss
+++ b/app/assets/stylesheets/exercise_logs.scss
@@ -1,6 +1,3 @@
-// Place all the styles related to the routines controller here.
+// Place all the styles related to the Exercise_logs controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
-.label-checkbox{
-    display: block;
-}
