--- a/app/views/exercise_logs/_form.html.erb
+++ b/app/views/exercise_logs/_form.html.erb
@@ -1,16 +1,11 @@
 <%= form_for exercise_log do |f| %>
     <%= f.label :date %>
-    <%= f.text_field :date %><br />
+    <%= f.date_field :date %><br />
     <p>If you used no weights then put 0</p>
     <%= f.label :weights %>
     <%= f.text_field :weight %><br />
-    <%= f.collection_check_boxes(:exercise_id, Exercise.all, :id, :name)do |b| %>
-    <%= b.label class:"label-checkbox" do%>
-        <%=b.check_box + b.text%>
-    <% end %>
+    <%= f.collection_select(:exercise_id, Exercise.all, :id, :name) %>
     <%= f.label :reps %>
     <%= f.text_field :reps %><br />
-<% end %>
-
     <%= f.submit %>
 <% end %>
