--- a/app/views/exercise_logs/show.html.erb
+++ b/app/views/exercise_logs/show.html.erb
@@ -1,5 +1,3 @@
 <%= link_to "Edit Exercise Log", edit_exercise_log_path(@exercise_log) %>
-<h1><%= @exercise_log.date %></h1>
-<% @exercise_log.exercises.each do |exercise| %>
-    <%= exercise.name %>
-<% end %>
+<h1><%= @exercise_log.exercise.name  %></h1>
+<%= @exercise_log.date.strftime("%m/%d/%Y") %>
