--- a/app/views/exercises/index.html.erb
+++ b/app/views/exercises/index.html.erb
@@ -1,5 +1,5 @@
 <h1> Here is a list of all the exercises you can add to a routine</h1>
 <% @exercises.each do |exercise| %>
-    <h1><%= exercise.name %></h1>    
+    <h1><%= link_to "#{exercise.name}", exercise_path(exercise) %></h1>    
     <p>Weights? <%= exercise.weights %></p>
 <% end %>
