--- a/app/views/exercise_logs/show.html.erb
+++ b/app/views/exercise_logs/show.html.erb
@@ -1,3 +1,3 @@
 <%= link_to "Edit Exercise Log", edit_exercise_log_path(@exercise_log) %>
 <h1><%= @exercise_log.exercise.name  %></h1>
-<%= @exercise_log.date.strftime("%m/%d/%Y") %>
+<%= @exercise_log.date ? @exercise_log.date.strftime("%m/%d/%Y") : "nodate" %>
