--- a/app/views/exercises/show.html.erb
+++ b/app/views/exercises/show.html.erb
@@ -1,5 +1,5 @@
 <h1> Here is a list of the logs that you filled out for this exercise </h1>
-<h3><%= link_to "New Log", new_exercise_log_path %></h3>
+<h3><%= link_to "New Log", new_exercise_exercise_log_path(@exercise) %></h3>
 <% @exercise.exercise_logs.by_user(current_user).each do |exercise| %>
-    <%= link_to "#{exercise.date ? exercise.date.strftime("%m/%d/%Y") : 'nodate'}", exercise_log_path(exercise) %>
+    <h2><%= link_to "#{exercise.date ? exercise.date.strftime("%m/%d/%Y") : 'nodate'}", exercise_log_path(exercise) %></h2>
 <% end %>
