--- a/app/views/exercise_logs/_form.html.erb
+++ b/app/views/exercise_logs/_form.html.erb
@@ -3,8 +3,12 @@
     <%= f.date_field :date %><br />
     <p>If you used no weights then put 0</p>
     <%= f.label :weights %>
-    <%= f.text_field :weight %><br />    
-    <%= f.collection_select(:exercise_id, Exercise.all, :id, :name) %>
+    <%= f.text_field :weight %><br /> 
+    <% if params[:exercise_id] %>
+      <%= f.hidden_field(:exercise_id, :value => params[:exercise_id]) %>
+  <% else %>
+      <%= f.collection_select(:exercise_id, Exercise.all, :id, :name) %>
+  <% end %>    
     <%= f.label :reps %>
     <%= f.number_field :reps %><br />    
     <%= f.submit %>
